removing php requirement from composer json

--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,7 @@
 {
     "name": "arcadier/apisdk",
     "description": "API SDK in PHP",
-    "require": {
-        "php": "^7.4.8"
-    },
+    "require": {},
     "repositories": [
         {
             "type": "composer",
