--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "bryanarcadier/apisdk",
     "description": "API SDK in PHP",
     "require": {
-        "php": "^7.0.0"
+        "php": "^7.0.0",
+        "bryanarcadier/apisdk": "dev-master"
     },
     "repositories": [
         {
